Bug 384813  - [mac] xul menubar is invisible when inspecting browser.xul in DOMi. r=gavin.
UltraBlame original commit: 8eb079ae66255a186779d126916b1569dc3dd3b9

--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -63,16 +63,6 @@ xhtml
 )
 ;
 #
-toolbar
--
-menubar
-{
-display
-:
-none
-;
-}
-#
 main
 -
 window
